@@ -1,9 +1,12 @@
 """Tests of the transform submodule"""
 
 import math
+
 import pytest
+
+import fiona
 from fiona import transform
-from fiona.errors import FionaDeprecationWarning
+from fiona.errors import FionaDeprecationWarning, TransformError
 from fiona.model import Geometry
 
 from .conftest import requires_gdal_lt_3
@@ -134,3 +137,43 @@ def test_transform_geom_precision_deprecation():
             Geometry(type="Point", coordinates=(0, 0)),
             precision=2,
         )
+
+
+def test_partial_reprojection_error():
+    """Raise an error about full reprojection failure unless we opt in."""
+    geom = {
+        "type": "Polygon",
+        "coordinates": (
+            (
+                (6453888.0, -6453888.0),
+                (6453888.0, 6453888.0),
+                (-6453888.0, 6453888.0),
+                (-6453888.0, -6453888.0),
+                (6453888.0, -6453888.0),
+            ),
+        ),
+    }
+    src_crs = 'PROJCS["unknown",GEOGCS["unknown",DATUM["Unknown based on WGS84 ellipsoid",SPHEROID["WGS 84",6378137,298.257223563,AUTHORITY["EPSG","7030"]]],PRIMEM["Greenwich",0,AUTHORITY["EPSG","8901"]],UNIT["degree",0.0174532925199433,AUTHORITY["EPSG","9122"]]],PROJECTION["Orthographic"],PARAMETER["latitude_of_origin",-90],PARAMETER["central_meridian",0],PARAMETER["false_easting",0],PARAMETER["false_northing",0],UNIT["metre",1,AUTHORITY["EPSG","9001"]],AXIS["Easting",EAST],AXIS["Northing",NORTH]]'
+    dst_crs = "EPSG:4326"
+    with pytest.raises(TransformError):
+        _ = transform.transform_geom(src_crs, dst_crs, geom)
+
+
+def test_partial_reprojection_opt_in():
+    """Get no exception if we opt in to partial reprojection."""
+    geom = {
+        "type": "Polygon",
+        "coordinates": (
+            (
+                (6453888.0, -6453888.0),
+                (6453888.0, 6453888.0),
+                (-6453888.0, 6453888.0),
+                (-6453888.0, -6453888.0),
+                (6453888.0, -6453888.0),
+            ),
+        ),
+    }
+    src_crs = 'PROJCS["unknown",GEOGCS["unknown",DATUM["Unknown based on WGS84 ellipsoid",SPHEROID["WGS 84",6378137,298.257223563,AUTHORITY["EPSG","7030"]]],PRIMEM["Greenwich",0,AUTHORITY["EPSG","8901"]],UNIT["degree",0.0174532925199433,AUTHORITY["EPSG","9122"]]],PROJECTION["Orthographic"],PARAMETER["latitude_of_origin",-90],PARAMETER["central_meridian",0],PARAMETER["false_easting",0],PARAMETER["false_northing",0],UNIT["metre",1,AUTHORITY["EPSG","9001"]],AXIS["Easting",EAST],AXIS["Northing",NORTH]]'
+    dst_crs = "EPSG:4326"
+    with fiona.Env(OGR_ENABLE_PARTIAL_REPROJECTION=True):
+        _ = transform.transform_geom(src_crs, dst_crs, geom)
